# aoc2021

./: .gitignore  Cargo.toml  README.md  go.mod
.github/workflows/: deno.yml  golang.yml  rust.yml
go/: README.md
go/day_1/: README.md  main.go  main_test.go
go/day_10/: README.md  main.go  main_test.go
go/day_11/: README.md  main.go  main_test.go
go/day_13/: README.md  letters.go  main.go  main_test.go
go/day_14/: README.md  main.go  main_test.go
go/day_18/: README.md  main.go  main_test.go
go/day_2/: main.go  main_test.go
go/day_22/: main.go
go/day_23/: main.go  main_test.go
go/day_24/: main.go
go/day_3/: README.md  main.go  main_test.go
go/day_4/: README.md  main.go  main_test.go
go/day_5/: README.md  main.go  main_test.go
go/day_6/: README.md  main.go  main_test.go
go/day_7/: README.md  main.go  main_test.go
go/day_8/: README.md  main.go  main_test.go
go/day_9/: README.md  main.go  main_test.go
rs/: README.md
rs/day_1/: README.md
rs/day_1/src/: lib.rs  main.rs
rs/day_10/: README.md
rs/day_10/src/: lib.rs  main.rs
rs/day_11/: README.md
rs/day_11/src/: lib.rs  main.rs
rs/day_12/: README.md
rs/day_13/: README.md
rs/day_14/: README.md
rs/day_15/: README.md
rs/day_16/: README.md
rs/day_17/: README.md
rs/day_19/: Cargo.toml  README.md
rs/day_2/: README.md
rs/day_20/: README.md
rs/day_21/: README.md
rs/day_22/: Cargo.toml  README.md
rs/day_25/: README.md
rs/day_3/: README.md
rs/day_6/: README.md
rs/day_9/: README.md
transforms/: Cargo.toml
transforms/src/: main.rs
ts/: README.md  run.ts
ts/day_1/: README.md  main.test.ts  main.ts
ts/day_10/: main.test.ts  main.ts
ts/day_2/: README.md  main.test.ts  main.ts
ts/day_22/: README.md  main.ts
ts/day_23/: README.md  main.test.ts  main.ts
ts/day_24/: README.md  main.ts
ts/day_3/: README.md  main.test.ts  main.ts
ts/day_4/: README.md  main.test.ts  main.ts
ts/day_5/: README.md  main.test.ts  main.ts
ts/day_6/: README.md  main.test.ts  main.ts
ts/day_7/: README.md  main.test.ts  main.ts
ts/day_8/: README.md  main.test.ts  main.ts
utils/analysis/: Pipfile
utils/benchmarks/: Cargo.toml
utils/cmd/benchrs/: Cargo.toml
utils/cmd/benchrs/src/: main.rs
utils/fetch_day/: Cargo.toml
(+45 files in other folders)
